--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.3.0",
     "redux": "^5.0.1",
+    "redux-logger": "^3.0.6",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
